updated methodology by adding pics and also changed the theme to blue instead of black

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8" />
     <meta name="author" content="Lama Alswliman, Wing Ka Ho, Madeleine Potter, Geetanjli Rani &amp; Burhan Ahmad Wani" />
     <script src="libs/header-attrs-2.25/header-attrs.js"></script>
-    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
     <script src="libs/js-cookie-3.0.0/js.cookie.js"></script>
     <script src="libs/peerjs-1.3.1/peerjs.min.js"></script>
     <script src="libs/tiny.toast-1.0.0/toast.min.js"></script>
@@ -31,15 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-<<<<<<< HEAD
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe09c8d160744f6ea676b2f78849308a","expires":1}</script>
-=======
-<<<<<<< HEAD
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x6723d77e4b04df89497aba251f39805","expires":1}</script>
-=======
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"c844adae86aa4039ae00a3bd1dea65be","expires":1}</script>
->>>>>>> 893430d6fc344759857097b349359fb28185adb1
->>>>>>> dfa305295773d85c86d732dd57a91e56a736f2bc
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x2012f0fbdaf459d86f9bfd28035ea76","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -54,6 +44,7 @@
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
+    <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -76,6 +67,7 @@ class: center, middle, inverse, title-slide
 ]
 
 ---
+
 
 
 
@@ -364,7 +356,7 @@ class: center, middle, inverse, title-slide
 ---
 ## Methodology: Workflow
 
-&lt;img src="methodology_workflow.png" width="95%" style="display: block; margin: auto;" /&gt;
+&lt;img src="edited_methodology.png" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
 ## Methodology: Identifying Monitoring Areas
@@ -381,7 +373,11 @@ class: center, middle, inverse, title-slide
 
 1. Map out land subsidence susceptibility that identifies areas of very high, high, moderate, low and very low susceptibility. 
 
+![](risk_scale.png)
+
 ---
+
+
 ## Methodology: Risk Mapping 
 
 1. Preprocess land subsidence and social data to create raster maps.
@@ -394,6 +390,7 @@ class: center, middle, inverse, title-slide
 
 1. Using risk index, produce a risk map showing areas at very high risk, high risk, moderate risk, low risk and very low risk.
 
+![](multicriteria_analysis.png)
 ---
 ## Data
 
@@ -564,7 +561,7 @@ From: &lt;a name=cite-bhattaraiRiskAssessmentLand2017&gt;&lt;/a&gt;[Bhattarai an
 
 ---
 
-class: center, top
+class: top
 
 ## Recommended Action Plan
 
@@ -592,7 +589,7 @@ class: center, top
 
 
 ---
-class: center, top
+class: top
 ### Budget Breakdown
 &lt;table class="table" style="font-size: 16px; width: auto !important; margin-left: auto; margin-right: auto;"&gt;
  &lt;thead&gt;
@@ -688,11 +685,11 @@ class: center, top
 
 ---
 
-# Risk and Limitations
+## Risk and Limitations
 
 .pull-left[
 
-## Risk
+### Risk
 
 - Unexpected Employee turnover
 
@@ -702,7 +699,7 @@ class: center, top
 
 .pull-right[
 
-## Limitations
+### Limitations
 
 - Master Plan: Integrated short-term and long-term solutions with mission and approach detailing spatial alternatives flood safety, social aspects, land reclamation, business &amp; residential, main ports, mobility &amp; infrastructure, water management, recreation-green space, environmental impact.
 
@@ -714,7 +711,7 @@ class: center, top
 ---
 
 
-class: center, top
+class: top
 
 ## Recommendations
 
@@ -723,7 +720,7 @@ class: center, top
 
 ---
 
-class: center, top
+class: top
 
 ## References
 
