--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-<<<<<<< HEAD
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x2012f0fbdaf459d86f9bfd28035ea76","expires":1}</script>
-=======
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xd63352306ea41309212d9e1e8b50d5d","expires":1}</script>
->>>>>>> 3a7def09f453ddadf422c0e1e3e3f54b2d8fa4e2
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xb4827c7260d4892883e7cb55db162d4","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -689,7 +685,7 @@ class: top
 
 ---
 
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 ## Risk and Limitations
 
 .pull-left[
@@ -701,7 +697,7 @@ class: top
 .pull-left[
 
 ## Scope
->>>>>>> 3a7def09f453ddadf422c0e1e3e3f54b2d8fa4e2
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; 3a7def09f453ddadf422c0e1e3e3f54b2d8fa4e2
 
 - ** Integrated Master Plan is inclusive of short-term and long-term solutions with mission and approach detailing spatial alternatives for flood safety, social aspects, land reclamation, business &amp; residential, main ports, mobility &amp; infrastructure, water management, recreation-green space, environmental impact. However, our project only covers land subsidence that might directly provide integrated solutions to other sectors of master plan. **  
 
@@ -711,13 +707,13 @@ class: top
 
 .pull-right[
 
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 ### Limitations
 
 - Master Plan: Integrated short-term and long-term solutions with mission and approach detailing spatial alternatives flood safety, social aspects, land reclamation, business &amp; residential, main ports, mobility &amp; infrastructure, water management, recreation-green space, environmental impact.
 =======
 ## Limitations and Uncertainity
->>>>>>> 3a7def09f453ddadf422c0e1e3e3f54b2d8fa4e2
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; 3a7def09f453ddadf422c0e1e3e3f54b2d8fa4e2
 
 - The urgency of municipal disaster risk reduction lies on mitigating subsidence and not protecting against sea level rise (SLR).
 
