resolved issue with one image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"de59f1d4ca404674a8cfc8948a987c82","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"dfb94b4054f6483ea4deb34f46752854","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -714,7 +714,7 @@ class: text-justify
 
 Apart from the global problem of Climate Change, the main factor that is affecting the sinking of Jakarta City is its Land Subsidence. So, our plan will address to mitigate that problem via both Predictive &amp; Preventive Measures.
 
-&lt;img src="land_Subsidence.jpg" width="70%" style="display: block; margin: auto;" /&gt;
+&lt;img src="Land_subsidence.jpg" width="70%" style="display: block; margin: auto;" /&gt;
 &lt;small&gt;From: Land Subsidence vs Climate Change - Jakarta, Source: [Journal of Water and Climate Change](https://climatescience.ru/uploads/pubs/0/04/04f/04f04a32145609d55ad7d154c9136fef.pdf)&lt;/small&gt;
 
 ---
