--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"f6c92656f7ed4fd2bc679710ca9d6c6f","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe5db5e094534f8aa1bb56976fbe4744","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -102,6 +102,7 @@ class: center, middle, inverse, title-slide
 
 ## Highlighting the problem 
 
+
 .panelset[
 
 .panel[.panel-name[The Sinking Capital]
@@ -116,7 +117,15 @@ class: center, middle, inverse, title-slide
 
 * To protect Jakarta from coastal flooding, the National Capital Integrated Coastal Development (NCID) was developed, with the main plan surrounding the construction of a sea wall which could reach 32km in length .
 
+* **Criticism to master plan policy**
 
+    * Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Criticism 1)
+
+    * It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
+
+    * Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
+
+    * Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches.
 
 ]
 
@@ -133,100 +142,13 @@ class: center, middle, inverse, title-slide
 
 ---
 
-## Global agendas and goals 1
-###  The Sendai Framework for Disaster Risk Reduction (2015)
-
-.pull-left[
-&lt;img src="SendaiFramrwork.jpeg" width="80%" /&gt;
-]
-.pull-right[
-
-
-* To understand disaster risk
-
-* To reduce vulnerability of coastal regions by enhancing resilience capacity e.g., preparedness to disasters
-
-* To strengthen local governance towards disaster risk management in accordance with this global framework -- a top down approach
-
-* Recognises the state has the primary role for DRR
-
-* Stakeholders should share the responsibility with the state
-
-
-]
----
-## Global agendas and goals 2
-### Sustainable Development Goals (SDGs)
-.panelset[
-.panel[.panel-name[SDG 6]
-
-.pull-left[
-
-&lt;img src="E_PRINT_06.jpg" width="80%" /&gt;
-]
-.pull-right[
-**Target 6.4**
-
-* By 2030, substantially increase water-use efficiency across all sectors and ensure sustainable withdrawals and supply of freshwater to address water scarcity and substantially reduce the number of people suffering from water scarcity
-]
-
-
-]
-
-.panel[.panel-name[SDG 11]
-.pull-left[
-
-&lt;img src="E_PRINT_11.jpg" width="80%" /&gt;
-]
-.pull-right[
-**Target 11.3**
-
-* By 2030, enhance inclusive and sustainable urbanization and capacity for participatory, integrated and sustainable human settlement planning and management in all countries
-]
-
-
-]
-
-.panel[.panel-name[SDG 13]
-.pull-left[
-
-&lt;img src="E_PRINT_13.jpg" width="80%" /&gt;
-]
-.pull-right[
-**Target 13.1**
-
-* Strengthen resilience and adaptive capacity to climate-related hazards and natural disasters in all countries
-
-**Target 13.2**
-* Integrate climate change measures into national policies, strategies and planning
-
-]
-
-]
-
-
-.panel[.panel-name[SDG 15]
-.pull-left[
-&lt;img src="E_PRINT_15.jpg" width="80%" /&gt;
-]
-.pull-right[
-**Target 15.3**
-
-* By 2030, combat desertification, restore degraded land and soil, including land affected by desertification, drought and floods, and strive to achieve a land degradation-neutral world
-]
-]
-]
-
-
----
-
 
 ## Causes of Subsidence
 
 .pull-left[
-* Physical factors: earthquakes. Indonesia is located on destructive plate boundaries where earthquakes happen frequently (Bott et al., 2021).
+* Physical factors: earthquakes. Indonesia is located on destructive plate boundaries where earthquakes happen frequently (Causes of LS 1).
 
-* Human/ social factors: groundwater extraction, rapid urban development, improper agricultural practices (Adibin et al., 2011)
+* Human/ social factors: groundwater extraction, rapid urban development, improper agricultural practices (Causes of LS 2). 
 
 * Natural consolidation of alluvium soil, load of infrastructures and constructions, and tectonic activities 
 
@@ -300,6 +222,89 @@ class: center, middle, inverse, title-slide
 
 ---
 
+## Global agendas and goals 1
+###  The Sendai Framework for Disaster Risk Reduction (2015)
+
+.pull-left[
+&lt;img src="SendaiFramrwork.jpeg" width="80%" /&gt;
+]
+.pull-right[
+
+
+* To understand disaster risk
+
+* To reduce vulnerability of coastal regions by enhancing resilience capacity e.g., preparedness to disasters
+
+* To strengthen local governance towards disaster risk management in accordance with this global framework
+
+* Recognises the state has the primary role for DRR
+
+* Stakeholders should share the responsibility with the state
+
+
+]
+---
+## Global agendas and goals 2
+### Sustainable Development Goals (SDGs)
+.panelset[
+.panel[.panel-name[SDG 6]
+
+.pull-left[
+
+&lt;img src="E_PRINT_06.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 6.4**
+
+* By 2030, substantially increase water-use efficiency across all sectors and ensure sustainable withdrawals and supply of freshwater to address water scarcity and substantially reduce the number of people suffering from water scarcity
+]
+
+
+]
+
+.panel[.panel-name[SDG 11]
+.pull-left[
+
+&lt;img src="E_PRINT_11.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 11.3**
+
+* By 2030, enhance inclusive and sustainable urbanization and capacity for participatory, integrated and sustainable human settlement planning and management in all countries
+]
+
+
+]
+
+.panel[.panel-name[SDG 13]
+.pull-left[
+
+&lt;img src="E_PRINT_13.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 13.1**
+
+* Strengthen resilience and adaptive capacity to climate-related hazards and natural disasters in all countries
+
+**Target 13.2**
+* Integrate climate change measures into national policies, strategies and planning
+
+]
+
+]
+
+.panel[.panel-name[SDG 15]
+.pull-left[
+&lt;img src="E_PRINT_15.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 15.3**
+
+* By 2030, combat desertification, restore degraded land and soil, including land affected by desertification, drought and floods, and strive to achieve a land degradation-neutral world
+]
+]
+]
+---
 
 
 ## Benefits to Addressing Land Subsidence
@@ -313,27 +318,6 @@ class: center, middle, inverse, title-slide
 - Protection of businesses and industry such as coastal tourism. 
 
 - To ensure clean groundwater supply by avoiding seawater intrusion to groundwater table
-
----
-
-## Criticism to the wall approach
-.pull-left[
-* Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Nunn et al., 2021)
-
-* It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
-
-* High cost of construction and maintenance. 
-
-* Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
-]
-
-.pull-right[
-
-* Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches.
-
-* The build of the sea wall can have a terrible impact on the socio-economic aspect of Jakarta city.
-
-]
 
 ---
 
@@ -683,53 +667,28 @@ class: top
 
 
 ---
-
-## Limitations
-
 .pull-left[
-
-### Scope
-
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-- ** Integrated Master Plan is inclusive of short-term and long-term solutions with mission and approach detailing spatial alternatives for flood safety, social aspects, land reclamation, business &amp; residential, main ports, mobility &amp; infrastructure, water management, recreation-green space, environmental impact. However, our project only covers land subsidence that might directly provide integrated solutions to other sectors of master plan1. **  
-
-=======
-- ** Integrated Master Plan is inclusive of short-term and long-term solutions with mission and approach detailing spatial alternatives for flood safety, social aspects, land reclamation, business &amp; residential, main ports, mobility &amp; infrastructure, water management, recreation-green space, environmental impact. However, our project only covers land subsidence that might directly provide integrated solutions to other sectors of master plan. **  
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; 91f52e9ac0671854fd7317ed2e4ae08cc1caffdd
-- 
-]
-.pull-right[
-
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 ## Limitations
+
 
 - The urgency of municipal disaster risk reduction lies on mitigating subsidence and not protecting against sea level rise (SLR)2,4.
 
 - Problem of Machine Learning 10.
 
-=======
-### Limitations and Uncertainity
-
-- The urgency of municipal disaster risk reduction lies on mitigating subsidence and not protecting against sea level rise (SLR).
-- Problem of Machine Learning.
-
-- Problem of mis-trust between public and government effecting participatory and consultative meetings.
-- Unexpected Employee turnover.
-
+- Problem of mistrust between public and government effecting participatory and consultative meetings.
 
 - Unexpected Data cost at freeware platforms 10.
-
-=======
-- Unexpected Data cost at freeware platforms.
-
 ]
+
+## Mitigations
+
 
 ---
 
 
 class: text-justify
 
-## Reflection
+## Summary (?)
 
 Apart from the global problem of Climate Change, the main factor that is affecting the sinking of Jakarta City is its Land Subsidence. So, our plan will address to mitigate that problem via both Predictive &amp; Preventive Measures.
 
@@ -767,7 +726,13 @@ Management Regulation of Indonesia’s Coastal and Sea Areas
 
 - 10CASA0023
 
+- Criticism 1 Nunn et al (2021) Seawalls as maladaptations along island coasts https://www.sciencedirect.com/science/article/abs/pii/S0964569121000399?casa_token=3ErEoQPI2QsAAAAA:0aQskpbCflgGu0qxf-_6ZfVAKFWVBhv3GJkpZiouQvEK2qrsIqf8Hl_6dQhb8cf9CETywHDyNAv 
 
+- Causes of LS 1 Bott et al., 2021 Land subsidence in Jakarta and Semarang Bay – The relationship between physical processes, risk perception, and household adaptation https://www.sciencedirect.com/science/article/pii/S0964569121002581 
+
+- Causes of LS 2 Adibin et al., 2011 Land subsidence of Jakarta (Indonesia) and its
+relation with urban development, Nat. Hazards, 59, 1753–1771,
+2011. https://www.sciencedirect.com/science/article/pii/S0964569121002581 
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
