--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xe5db5e094534f8aa1bb56976fbe4744","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x9b10dd2748544b1b5d90f11fdc7dfe8","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -667,20 +667,37 @@ class: top
 
 
 ---
+
+## Limitation and Mitigation
+
+
 .pull-left[
-## Limitations
 
+### Limitations
 
-- The urgency of municipal disaster risk reduction lies on mitigating subsidence and not protecting against sea level rise (SLR)2,4.
+- Problem of mis-trust between public and government effecting participatory and consultative meetings.
 
-- Problem of Machine Learning 10.
-
-- Problem of mistrust between public and government effecting participatory and consultative meetings.
+- Unexpected Employee turnover.
 
 - Unexpected Data cost at freeware platforms 10.
+
+- Change of government.
+ 
 ]
 
-## Mitigations
+.pull-right[
+
+### Mitigation
+
+- Participatory Learning Application of Consultative meeting would create trust and engagement between the people of Jakarta and the government.
+
+- Maintaining the data infrastructure of our project for smooth transition.
+
+- Alternative data sets from other satellite imagery are available with increased processing, validation etc.
+
+- Uniform budget-head transition with changing political parties.
+
+]
 
 
 ---
