--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x83d2d414cb648d58705dd164036b17b","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xdfd8529d08f4f1eb112b5ffd7b7a1d3","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -707,6 +707,7 @@ class: text-justify
 
 ## Summary
 
+.pull-left[
 - Jakarta is sinking and the NCICD does little to address the main cause which is land subsidence. 
 
 - This project aims to improve monitoring and decision-making by providing up-to-date land subsidence susceptibility and risk maps.
@@ -716,13 +717,13 @@ class: text-justify
   - Further evidence based and data driven policy and action.
   - Prevent future economic losses.
   - Mitigate fluvial, pluvial and coastal flood risk.
+]
 
-
-
-
-&lt;img src="Land_subsidence.jpg" width="70%" style="display: block; margin: auto;" /&gt;
+.pull-right[
+&lt;img src="Land_sub.png" width="100%" style="display: block; margin: auto;" /&gt;
 &lt;small&gt;From: Land Subsidence vs Climate Change - Jakarta, Source: [Journal of Water and Climate Change](https://climatescience.ru/uploads/pubs/0/04/04f/04f04a32145609d55ad7d154c9136fef.pdf)&lt;/small&gt;
 
+]
 ---
 
 class: text-justify
