--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"f6c92656f7ed4fd2bc679710ca9d6c6f","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xb3724876dcb43a4b94dece0f00c2728","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -102,6 +102,7 @@ class: center, middle, inverse, title-slide
 
 ## Highlighting the problem 
 
+
 .panelset[
 
 .panel[.panel-name[The Sinking Capital]
@@ -114,9 +115,22 @@ class: center, middle, inverse, title-slide
 
 .panel[.panel-name[NCICD]
 
-* To protect Jakarta from coastal flooding, the National Capital Integrated Coastal Development (NCID) was developed, with the main plan surrounding the construction of a sea wall which could reach 32km in length .
+.pull-left[ 
+* To protect Jakarta from coastal flooding, the National Capital Integrated Coastal Development (NCID) was developed, with the main plan surrounding the construction of a sea wall which could reach 32km in length . 
+]
+
+.pull-right[
+
+#### Criticism to master plan policy
+
+* Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Nunn et al., 2021)
+
+* It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
+
+* Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
 
 
+* Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches. ]
 
 ]
 
@@ -128,95 +142,9 @@ class: center, middle, inverse, title-slide
 
 * Accurately estimating and modelling the contribution of each causative factor to observed land subsidence in specific areas is still necessary.
 
-]
-]
-
----
-
-## Global agendas and goals 1
-###  The Sendai Framework for Disaster Risk Reduction (2015)
-
-.pull-left[
-&lt;img src="SendaiFramrwork.jpeg" width="80%" /&gt;
-]
-.pull-right[
-
-
-* To understand disaster risk
-
-* To reduce vulnerability of coastal regions by enhancing resilience capacity e.g., preparedness to disasters
-
-* To strengthen local governance towards disaster risk management in accordance with this global framework -- a top down approach
-
-* Recognises the state has the primary role for DRR
-
-* Stakeholders should share the responsibility with the state
-
 
 ]
----
-## Global agendas and goals 2
-### Sustainable Development Goals (SDGs)
-.panelset[
-.panel[.panel-name[SDG 6]
-
-.pull-left[
-
-&lt;img src="E_PRINT_06.jpg" width="80%" /&gt;
 ]
-.pull-right[
-**Target 6.4**
-
-* By 2030, substantially increase water-use efficiency across all sectors and ensure sustainable withdrawals and supply of freshwater to address water scarcity and substantially reduce the number of people suffering from water scarcity
-]
-
-
-]
-
-.panel[.panel-name[SDG 11]
-.pull-left[
-
-&lt;img src="E_PRINT_11.jpg" width="80%" /&gt;
-]
-.pull-right[
-**Target 11.3**
-
-* By 2030, enhance inclusive and sustainable urbanization and capacity for participatory, integrated and sustainable human settlement planning and management in all countries
-]
-
-
-]
-
-.panel[.panel-name[SDG 13]
-.pull-left[
-
-&lt;img src="E_PRINT_13.jpg" width="80%" /&gt;
-]
-.pull-right[
-**Target 13.1**
-
-* Strengthen resilience and adaptive capacity to climate-related hazards and natural disasters in all countries
-
-**Target 13.2**
-* Integrate climate change measures into national policies, strategies and planning
-
-]
-
-]
-
-
-.panel[.panel-name[SDG 15]
-.pull-left[
-&lt;img src="E_PRINT_15.jpg" width="80%" /&gt;
-]
-.pull-right[
-**Target 15.3**
-
-* By 2030, combat desertification, restore degraded land and soil, including land affected by desertification, drought and floods, and strive to achieve a land degradation-neutral world
-]
-]
-]
-
 
 ---
 
@@ -300,6 +228,89 @@ class: center, middle, inverse, title-slide
 
 ---
 
+## Global agendas and goals 1
+###  The Sendai Framework for Disaster Risk Reduction (2015)
+
+.pull-left[
+&lt;img src="SendaiFramrwork.jpeg" width="80%" /&gt;
+]
+.pull-right[
+
+
+* To understand disaster risk
+
+* To reduce vulnerability of coastal regions by enhancing resilience capacity e.g., preparedness to disasters
+
+* To strengthen local governance towards disaster risk management in accordance with this global framework -- a top down approach
+
+* Recognises the state has the primary role for DRR
+
+* Stakeholders should share the responsibility with the state
+
+
+]
+---
+## Global agendas and goals 2
+### Sustainable Development Goals (SDGs)
+.panelset[
+.panel[.panel-name[SDG 6]
+
+.pull-left[
+
+&lt;img src="E_PRINT_06.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 6.4**
+
+* By 2030, substantially increase water-use efficiency across all sectors and ensure sustainable withdrawals and supply of freshwater to address water scarcity and substantially reduce the number of people suffering from water scarcity
+]
+
+
+]
+
+.panel[.panel-name[SDG 11]
+.pull-left[
+
+&lt;img src="E_PRINT_11.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 11.3**
+
+* By 2030, enhance inclusive and sustainable urbanization and capacity for participatory, integrated and sustainable human settlement planning and management in all countries
+]
+
+
+]
+
+.panel[.panel-name[SDG 13]
+.pull-left[
+
+&lt;img src="E_PRINT_13.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 13.1**
+
+* Strengthen resilience and adaptive capacity to climate-related hazards and natural disasters in all countries
+
+**Target 13.2**
+* Integrate climate change measures into national policies, strategies and planning
+
+]
+
+]
+
+.panel[.panel-name[SDG 15]
+.pull-left[
+&lt;img src="E_PRINT_15.jpg" width="80%" /&gt;
+]
+.pull-right[
+**Target 15.3**
+
+* By 2030, combat desertification, restore degraded land and soil, including land affected by desertification, drought and floods, and strive to achieve a land degradation-neutral world
+]
+]
+]
+---
 
 
 ## Benefits to Addressing Land Subsidence
@@ -313,27 +324,6 @@ class: center, middle, inverse, title-slide
 - Protection of businesses and industry such as coastal tourism. 
 
 - To ensure clean groundwater supply by avoiding seawater intrusion to groundwater table
-
----
-
-## Criticism to the wall approach
-.pull-left[
-* Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Nunn et al., 2021)
-
-* It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
-
-* High cost of construction and maintenance. 
-
-* Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
-]
-
-.pull-right[
-
-* Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches.
-
-* The build of the sea wall can have a terrible impact on the socio-economic aspect of Jakarta city.
-
-]
 
 ---
 
