--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-<<<<<<< HEAD
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x63fcd5db10740acbbb7a380916e338d","expires":1}</script>
-=======
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xea0d477280b4ba3b35fe4b50f13555d","expires":1}</script>
->>>>>>> 88012c34b2b2b77771ea43e7a7733b3435bb577a
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xba091dd89974bd09b2c7c7771ade94b","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -121,20 +117,24 @@ class: center, middle, inverse, title-slide
 .panel[.panel-name[NCICD]
 
 .pull-left[ 
-* To protect Jakarta from coastal flooding, the National Capital Integrated Coastal Development (NCID) was developed, with the main plan surrounding the construction of a sea wall which could reach 32km in length . 
-]
 
+* To protect Jakarta from coastal flooding, the National Capital Integrated Coastal Development (NCID) was developed, with the main plan surrounding the construction of a sea wall which could reach 32km in length .
+
+  &lt;img src="sea_wall.jpg" width="320" height="240" /&gt;
+
+]
 .pull-right[
 
-#### Criticism to master plan policy
+**criticising master plan policy**
 
-* Sea wall requires frequent maintenance from coastal erosion and destroy the natural landscape of Jakarta Bay (Criticism 1)
+* Sea wall requires frequent maintenance from coastal erosion and destroy Jakarta Bay natural landscape.
 
-* It can only provide coastal defense but it’s unable to solve the root cause of the problem which is land subsidence.
+* Only provide coastal defense than solving problem root cause (land subsidence).
 
-* Sea wall may create conflict with the dynamic coastal nature and block the sediment exchange between land and sea.
+* Create conflict with dynamic coastal nature and block sediment exchange between land and sea.
 
-* Can disrupt natural shoreline  processes and ruin coastal habitats such as mangrove and intertidal beaches. 
+* Disrupt shoreline processes and ruin coastal habitats like intertidal beaches.  
+
 ]
 ]
 
@@ -738,7 +738,7 @@ class: text-justify
 
 class: text-justify
 
-## References
+## References 1
 
 - &lt;span style="font-size: 12pt;"&gt; 1). Final version - Master Plan. National Capital Integrated Coastal Development.&lt;/span&gt;
 
@@ -764,7 +764,7 @@ class: text-justify
 
 class: text-justify
 
-## References
+## References 2
 
 - &lt;span style="font-size: 12pt;"&gt; 11). [CASA0023](https://andrewmaclachlan.github.io/CASA0023/) &lt;/span&gt;
 
