--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"xba091dd89974bd09b2c7c7771ade94b","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x00c25bed0204b78bed4dd41578fb028","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -125,7 +125,7 @@ class: center, middle, inverse, title-slide
 ]
 .pull-right[
 
-**criticising master plan policy**
+**criticising master plan policy:**
 
 * Sea wall requires frequent maintenance from coastal erosion and destroy Jakarta Bay natural landscape.
 
