--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x151fb44cd9d4e3a9264ba3546b5d7ec","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x1133025abee49d5bea8369f84eac7b4","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -81,6 +81,8 @@ class: center, middle, inverse, title-slide
 .panel[.panel-name[Jakarta as capital]
 
 * Jakarta is home to significant financial institutions like the Indonesia Stock Exchange and the Bank of Indonesia, along with serving as the corporate headquarters for numerous Indonesian companies and multinational corporations. This underscores its pivotal role in the country's economy.
+ 
+&lt;img src="Jakarta-map.png" width="80%" style="display: block; margin: auto;" /&gt;
 
 ]
 
@@ -774,6 +776,8 @@ class: text-justify
 
 - &lt;span style="font-size: 12pt;"&gt; 14). [Causes of LS 2 Adibin et al., 2011 Land subsidence of Jakarta (Indonesia) and its relation with urban development, Nat. Hazards, 59, 1753–1771,2011](https://www.sciencedirect.com/science/article/pii/S0964569121002581) &lt;/span&gt;
 
+this is for maddie to do refrenceing 
+Criticizing sea wall approch are all taken from this PDF (GIANT SEA WALL CONSTRUCTION: IS IT THE RIGHT SOLUTION TO OVERCOME JAKARTA'S SINKING? Research Project for Environmental Management)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
