--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x1133025abee49d5bea8369f84eac7b4","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x63b977dec0243e0ae318d16abaef834","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -89,7 +89,7 @@ class: center, middle, inverse, title-slide
 .panel[.panel-name[Area]
 
 * The area of Jakarta is 661.5km2 and is divided to five administrative cities of South Jakarta, Central Jakarta, East Jakarta, West Jakarta, and North Jakarta.
-
+&lt;img src="Map-of-administration-of-Jakarta-Province.jpg" width="55%" style="display: block; margin: auto;" /&gt;
 ]
 
 .panel[.panel-name[Population]
