--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"e6976ba27ad14c0cbfba14de3abc10d3","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x2d95460aad740eb8264a28eefade294","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -112,7 +112,7 @@ class: center, middle, inverse, title-slide
 
 .pull-left[ 
 
-&lt;img src="jakart_submerged.jpg" style="display: block; margin: auto;" /&gt;
+![](jakart_submerged.jpeg)&lt;!-- --&gt;
 
 ]
 
