--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x2d95460aad740eb8264a28eefade294","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x7680e79ec9f47068012b9e850b83fdc","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -786,6 +786,10 @@ class: text-justify
 
 this is for maddie to do refrenceing 
 Criticizing sea wall approch are all taken from this PDF (GIANT SEA WALL CONSTRUCTION: IS IT THE RIGHT SOLUTION TO OVERCOME JAKARTA'S SINKING? Research Project for Environmental Management)
+
+Significance of jakarta(Building Indonesia’s Resilience to Disaster)
+
+Main cause in highlighting the problem part (Study on the risk and impacts of land subsidence in Jakarta https://d-nb.info/1142926850/34 )
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
