--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"cb16d34f693344df9ebef58d47401b07","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x8cbef4785954df48204c8d270156e6b","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -263,6 +263,7 @@ From: &lt;a name=cite-sheryltiantongleeJakartaIndonesiaCapital2023&gt;&lt;/a&gt;
 
 .pull-left[
 &lt;img src="SendaiFramrwork.jpeg" width="80%" /&gt;
+
 ]
 .pull-right[
 
@@ -275,10 +276,10 @@ From: &lt;a name=cite-sheryltiantongleeJakartaIndonesiaCapital2023&gt;&lt;/a&gt;
 
 * Recognises the state has the primary role for DRR
 
-* Stakeholders should share the responsibility with the state
 
 
 ]
+&lt;small&gt;Source: [Implementing the Sendai Framework](https://www.undrr.org/implementing-sendai-framework/what-sendai-framework)&lt;/small&gt;
 ---
 ## Global agendas and goals 2
 ### Sustainable Development Goals (SDGs)
@@ -340,7 +341,7 @@ From: &lt;a name=cite-sheryltiantongleeJakartaIndonesiaCapital2023&gt;&lt;/a&gt;
 ]
 ]
 ]
-
+&lt;small&gt;Source: [The 17 Goals | Sustainable Development](https://sdgs.un.org/goals)&lt;/small&gt;
 ---
 
 
